--- a/package.json
+++ b/package.json
@@ -3,10 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@editorjs/attaches": "^1.3.0",
+    "@editorjs/checklist": "^1.4.0",
     "@editorjs/code": "^2.8.0",
+    "@editorjs/delimiter": "^1.3.0",
     "@editorjs/editorjs": "^2.26.5",
+    "@editorjs/embed": "^2.5.3",
     "@editorjs/header": "^2.7.0",
+    "@editorjs/image": "^2.8.1",
+    "@editorjs/inline-code": "^1.4.0",
+    "@editorjs/link": "^2.5.0",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/marker": "^1.3.0",
+    "@editorjs/nested-list": "^1.3.0",
     "@editorjs/paragraph": "^2.9.0",
+    "@editorjs/quote": "^2.5.0",
+    "@editorjs/raw": "^2.4.0",
+    "@editorjs/simple-image": "^1.5.1",
+    "@editorjs/table": "^2.2.1",
+    "@editorjs/underline": "^1.1.0",
+    "@editorjs/warning": "^1.3.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.4",
@@ -31,6 +47,11 @@
     "@reduxjs/toolkit": "^1.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/user-event": "^7.1.2",
+    "@tiptap/extension-color": "^2.0.2",
+    "@tiptap/extension-text-style": "^2.0.2",
+    "@tiptap/pm": "^2.0.2",
+    "@tiptap/react": "^2.0.2",
+    "@tiptap/starter-kit": "^2.0.2",
     "@types/jest": "^27.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.2",
@@ -67,6 +88,7 @@
     "redux-saga": "^1.1.3",
     "remark-gfm": "^3.0.0",
     "styled-components": "^5.3.5",
+    "tabler-icons-react": "^1.56.0",
     "tailwindcss-radix": "^2.7.0",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
