--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@mui/system": "5.0.2",
     "@radix-ui/react-accordion": "^1.1.0",
     "@radix-ui/react-aspect-ratio": "^1.0.1",
+    "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.3",
     "@radix-ui/react-icons": "^1.2.0",
@@ -49,6 +50,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@tiptap/extension-color": "^2.0.2",
     "@tiptap/extension-text-style": "^2.0.2",
+    "@tiptap/extension-underline": "^2.0.3",
     "@tiptap/pm": "^2.0.2",
     "@tiptap/react": "^2.0.2",
     "@tiptap/starter-kit": "^2.0.2",
