--- a/package.json
+++ b/package.json
@@ -86,12 +86,13 @@
     "react-markdown": "^7.0.1",
     "react-parallax-tilt": "^1.7.121",
     "react-redux": "^7.2.0",
-    "tabler-icons-react": "^1.56.0",
     "react-text-transition": "^1.3.0",
     "redux-saga": "^1.1.3",
     "remark-gfm": "^3.0.0",
     "styled-components": "^5.3.5",
+    "tabler-icons-react": "^1.56.0",
     "tailwindcss-radix": "^2.7.0",
+    "tiptap-markdown": "^0.7.4",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "~4.3.2",
