--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@mui/styles": "^5.0.1",
     "@mui/system": "5.0.2",
     "@radix-ui/react-accordion": "^1.1.0",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-aspect-ratio": "^1.0.1",
     "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.3",
