--- a/package.json
+++ b/package.json
@@ -52,13 +52,18 @@
     "@testing-library/user-event": "^7.1.2",
     "@tiptap/extension-bullet-list": "^2.0.3",
     "@tiptap/extension-color": "^2.0.2",
+    "@tiptap/extension-gapcursor": "^2.0.3",
+    "@tiptap/extension-hard-break": "^2.0.3",
     "@tiptap/extension-history": "^2.0.3",
+    "@tiptap/extension-image": "^2.0.3",
     "@tiptap/extension-link": "^2.0.3",
     "@tiptap/extension-list-item": "^2.0.3",
     "@tiptap/extension-ordered-list": "^2.0.3",
+    "@tiptap/extension-placeholder": "^2.0.3",
     "@tiptap/extension-subscript": "^2.0.3",
     "@tiptap/extension-superscript": "^2.0.3",
     "@tiptap/extension-text-style": "^2.0.2",
+    "@tiptap/extension-typography": "^2.0.3",
     "@tiptap/extension-underline": "^2.0.3",
     "@tiptap/pm": "^2.0.2",
     "@tiptap/react": "^2.0.2",
@@ -100,7 +105,7 @@
     "styled-components": "^5.3.5",
     "tabler-icons-react": "^1.56.0",
     "tailwindcss-radix": "^2.7.0",
-    "tiptap-markdown": "^0.7.4",
+    "tiptap-markdown": "^0.8.1",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "~4.3.2",
