--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "phosphor-react": "^1.4.1",
     "react": "^17.0.2",
     "react-animate-height": "^3.1.1",
+    "react-awesome-button": "^7.0.5",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-hot-toast": "^2.4.0",
