--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@types/jest": "^27.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.2",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^17.0.2",
     "@types/react-redux": "^7.1.7",
     "allotment": "^1.18.0",
@@ -96,6 +97,7 @@
     "react": "^17.0.2",
     "react-animate-height": "^3.1.1",
     "react-awesome-button": "^7.0.5",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-hot-toast": "^2.4.0",
