--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
     "@editorjs/table": "^2.2.1",
     "@editorjs/underline": "^1.1.0",
     "@editorjs/warning": "^1.3.0",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
     "@monaco-editor/react": "^4.3.1",
     "@radix-ui/react-accordion": "^1.1.0",
     "@radix-ui/react-alert-dialog": "^1.0.4",
@@ -69,6 +67,7 @@
     "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^17.0.2",
     "@types/react-redux": "^7.1.7",
+    "ai": "^2.1.21",
     "allotment": "^1.18.0",
     "axios": "^0.21.4",
     "buffer": "^6.0.3",
@@ -83,15 +82,16 @@
     "interweave": "^13.0.0",
     "lottie-react": "^2.3.1",
     "monaco-editor": "^0.28.1",
-    "next": "^12.3.4",
+    "next": "^13.4.10",
     "next-themes": "^0.2.1",
     "next-transpile-modules": "^10.0.0",
+    "openai-edge": "^1.2.0",
     "phosphor-react": "^1.4.1",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-animate-height": "^3.1.1",
     "react-awesome-button": "^7.0.5",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.14.7",
     "react-hot-toast": "^2.4.0",
     "react-markdown": "^7.0.1",
