--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "allotment": "^1.18.0",
     "axios": "^0.21.4",
     "buffer": "^6.0.3",
-    "date-fns": "^2.25.0",
+    "date-fns": "^2.30.0",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "draft.js": "^0.2.0",
@@ -91,6 +91,7 @@
     "react-animate-height": "^3.1.1",
     "react-awesome-button": "^7.0.5",
     "react-beautiful-dnd": "^13.1.1",
+    "react-day-picker": "^8.8.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-hot-toast": "^2.4.0",
