--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "react-parallax-tilt": "^1.7.121",
     "react-redux": "^7.2.0",
     "react-text-transition": "^1.3.0",
+    "react-use-websocket": "^3.0.0",
     "redux-saga": "^1.1.3",
     "remark-gfm": "^3.0.0",
     "styled-components": "^5.3.5",
