--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tabs": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.4",
     "@reduxjs/toolkit": "^1.7.0",
+    "@rive-app/react-canvas": "^4.0.0",
     "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-query-devtools": "^4.29.19",
     "@testing-library/jest-dom": "^5.14.1",
