--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "allotment": "^1.18.0",
     "axios": "^0.21.4",
     "buffer": "^6.0.3",
+    "color-thief-react": "^2.1.0",
     "date-fns": "^2.30.0",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
