--- a/package.json
+++ b/package.json
@@ -99,8 +99,10 @@
     "react-draft-wysiwyg": "^1.14.7",
     "react-hot-toast": "^2.4.0",
     "react-markdown": "^7.0.1",
+    "react-palette": "^1.0.2",
     "react-parallax-tilt": "^1.7.121",
     "react-redux": "^7.2.0",
+    "react-superellipse": "^0.0.6",
     "react-text-transition": "^1.3.0",
     "redux-saga": "^1.1.3",
     "remark-gfm": "^3.0.0",
