--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,2 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules
 .next
-# testing
-/coverage
-.cache
-/dist
-.vscode
-/out
-# react-scripts production
-/build
-
-# misc
-.DS_Store
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-public/page-data
-public/render-page.js
-public/render-page.js.map
-public/static
-
-public_dev
