--- a/package.json
+++ b/package.json
@@ -28,21 +28,25 @@
     "@radix-ui/react-accordion": "^1.1.0",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-aspect-ratio": "^1.0.1",
-    "@radix-ui/react-checkbox": "^1.0.3",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.3",
-    "@radix-ui/react-dropdown-menu": "^2.0.3",
-    "@radix-ui/react-icons": "^1.2.0",
-    "@radix-ui/react-popover": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-radio-group": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.0.2",
-    "@radix-ui/react-select": "^1.2.1",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.1",
-    "@radix-ui/react-tabs": "^1.0.2",
-    "@radix-ui/react-tooltip": "^1.0.4",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.6",
+    "@radix-ui/themes": "^1.0.0",
     "@reduxjs/toolkit": "^1.7.0",
     "@rive-app/react-canvas": "^4.0.0",
     "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-query-devtools": "^4.29.19",
+    "@tanstack/react-table": "^8.9.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/user-event": "^7.1.2",
     "@tiptap/extension-bullet-list": "^2.0.3",
@@ -72,6 +76,8 @@
     "allotment": "^1.18.0",
     "axios": "^0.21.4",
     "buffer": "^6.0.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "color-thief-react": "^2.1.0",
     "date-fns": "^2.30.0",
     "draft-js": "^0.11.7",
@@ -83,6 +89,7 @@
     "framer-motion": "^6.5.1",
     "interweave": "^13.0.0",
     "lottie-react": "^2.3.1",
+    "lucide-react": "^0.268.0",
     "monaco-editor": "^0.28.1",
     "next": "^12.3.4",
     "next-themes": "^0.2.1",
@@ -109,6 +116,8 @@
     "styled-components": "^5.3.5",
     "tabler-icons-react": "^1.56.0",
     "tailwind-datepicker-react": "^1.4.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6",
     "tailwindcss-radix": "^2.7.0",
     "tiptap-markdown": "^0.8.1",
     "ts-jest": "^27.0.5",
