--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -14,12 +14,14 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
       - name: Build Edugator Staff Application
         run: npm install && npm run build && npm run export
-      - name: move routes-manfiest.json to out folder
-        run: mv .next/routes-manifest.json ./out/
-      - name: Deploy app dev build to S3 bucket
-        run: aws s3 sync ./out/ s3://development-trunk-edugator --delete
+      - name: Move route manifest to out folder
+        run: mv ./.next/routes-manifest.json ./out/
+      - name: Deploy app build to S3 bucket
+        run: aws s3 sync ./out/ s3://edugator.link --delete
+      - name: Invalidate cache in cdn
+        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.DEV_CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
